# CortexIntel

./: .gitignore  Cargo.toml  README.md  install.sh
agents/: adverse-event-cluster.md  aml-layering.md  anomalies.md  background-dossier.md  bank-txn-monitor.md  c2-detection.md  chargeback-ring.md  churn-risk.md  claims-fraud-ring.md  clin-pathway.md  clin-readmit.md  clin-safety-cluster.md  coa-analysis.md  commercial-brief.md  comms-threads.md  conflict-of-interest.md  contradiction-check.md  critical-asset-mapping.md  cs-champion-map.md  cs-churn-risk.md  cs-expansion.md  cs-health-scorecard.md  cs-onboarding-risk.md  cs-qbr-prep.md  csam-hash-triage.md  data-quality-audit.md  document-linkage.md  entity-deep-dive.md  executive-brief.md  follow-the-money.md  geo-aoo.md  geo-colocation.md  geo-geofence.md  geo-layer-triage.md  geo-movement.md  geo-pattern-of-life.md  grooming-escalation.md  hidden-links.md  hr-attrition.md  hr-dei-signal.md  (+46 more)
demos/: follow-the-money.cortex  follow-the-money.csv
docs/: PLUGINS.md  ROADMAP.md  USAGE.md
gui/: README.md  make-dmg.sh
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
src/: agentlib.rs  agents.rs  anomaly.rs  assessment.rs  audit.rs  auth.rs  calibrate.rs  cli.rs  config.rs  connectors.rs  correlation.rs  disciplines.rs  embed.rs  enrich.rs  extract.rs  fuzzy.rs  geoint.rs  iscore.rs  keys.rs  lib.rs  linkpred.rs  main.rs  monitor.rs  netsci.rs  ontology.rs  pipeline.rs  plugins.rs  profile.rs  projects.rs  prompts.rs  risk.rs  (+10 more)
(+5 files in other folders)
