[package]
name = "cortexintel-gui"
version = "0.1.0"
edition = "2021"
description = "CortexIntel desktop GUI (Tauri + WebView)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The engine, reused as a library.
cortexintel = { path = "../.." }

[features]
# Enable custom protocol in production builds.
custom-protocol = ["tauri/custom-protocol"]
